More fixes for testing
Added config to buildout
Added SQLAlchemy to test-requires

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -2,9 +2,10 @@
 extends =
     https://raw.github.com/collective/buildout.plonetest/master/test-4.x.cfg
 
+package-name = collective.celery
+package-extras = [test]
 
 eggs +=
     SQLAlchemy
     celery[sqlalchemy]
 
-package-name = collective.celery
