Fixed autodoc API.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -9,3 +9,11 @@ eggs +=
     SQLAlchemy
     celery[sqlalchemy]
 
+parts += scripts
+
+
+[scripts]
+recipe = zc.recipe.egg
+eggs = ${buildout:eggs}
+       collective.celery[test]
+       Sphinx
