Do not pin setuptools version

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -18,3 +18,7 @@ eggs = ${buildout:eggs}
        collective.celery[test]
        Sphinx
        createcoverage
+
+[versions]
+# use latest version of setuptools always
+setuptools =
